--- a/AntonWang/Component/Tools/Tools.csproj
+++ b/AntonWang/Component/Tools/Tools.csproj
@@ -53,6 +53,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\packages\ICSharpCode.SharpZipLib.dll.0.85.4.369\lib\net20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -77,7 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MapperHelper.cs" />
-    <Compile Include="ZipHelper.cs" />
+    <Compile Include="CompressHelper.cs" />
     <Compile Include="CopyProperty.cs" />
     <Compile Include="ExpressionExtendsion.cs" />
     <Compile Include="StreamByteHelper.cs" />
@@ -91,6 +94,7 @@
     <Compile Include="OperationResult.cs" />
     <Compile Include="OperationResultType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FileCompression%28文件压缩%29.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
